# virocore

./: .gitattributes  .gitignore  .reviewboardrc  ISSUE_TEMPLATE  Jenkinsfile  Podfile  README.md  VROMomentsLayoutDelegate.cpp  VROMomentsLayoutDelegate.h
android/app/: CMakeLists.txt  build.gradle  maven-push.gradle  preprocessor.gradle  proguard-rules.pro  viro_core-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: blinn_c_fsh.glsl  blinn_c_reflect_fsh.glsl  blinn_functions_fsh.glsl  blinn_t_fsh.glsl  blinn_t_reflect_fsh.glsl  constant_fsh.glsl  constant_functions_fsh.glsl  constant_q_fsh.glsl  constant_t_fsh.glsl  lambert_c_fsh.glsl  lambert_c_reflect_fsh.glsl  lambert_functions_fsh.glsl  lambert_t_fsh.glsl  lambert_t_reflect_fsh.glsl  lighting_general_functions_fsh.glsl  phong_c_fsh.glsl  phong_c_reflect_fsh.glsl  phong_functions_fsh.glsl  phong_t_fsh.glsl  phong_t_reflect_fsh.glsl  skinning_vsh.glsl  standard_fsh.glsl
android/app/src/main/cpp/: PersistentRef.h  VROAVPlayer.cpp  VROAVPlayer.h  VROAVRecorderAndroid.cpp  VROAVRecorderAndroid.h  VROAndroidCAPI.h  VROAndroidViewTexture.cpp  VROAndroidViewTexture.h  VROAudioPlayerAndroid.cpp  VROAudioPlayerAndroid.h  VRODisplayOpenGLGVR.h  VRODisplayOpenGLOVR.h  VRODriverOpenGLAndroid.cpp  VRODriverOpenGLAndroid.h  VRODriverOpenGLAndroidGVR.h  VRODriverOpenGLAndroidOVR.h  VROImageAndroid.cpp  VROImageAndroid.h  VROInputControllerARAndroid.cpp  VROInputControllerARAndroid.h  VROInputControllerCardboard.cpp  VROInputControllerCardboard.h  VROInputControllerDaydream.cpp  VROInputControllerDaydream.h  VROInputControllerOVR.cpp  VROInputControllerOVR.h  VROInputPresenterCardboard.h  VROInputPresenterDaydream.h  VROInputPresenterOVR.h  VROLooper.cpp  VROLooper.h  VROPCMAudioPlayer.cpp  VROPCMAudioPlayer.h  VRORenderDelegate.h  VRORenderToTextureDelegateAndroid.h  VRORenderer_JNI.cpp  VROSample.cpp  VROSample.h  VROSampleRenderer.cpp  VROSampleRenderer.h  (+32 more)
android/app/src/main/cpp/arcore/: ARCore_API.h  ARCore_JNI.cpp  ARCore_JNI.h  ARCore_Native.cpp  ARCore_Native.h  ARDeclarativeImageNode_JNI.cpp  ARDeclarativeImageNode_JNI.h  ARDeclarativeNode_JNI.cpp  ARDeclarativeNode_JNI.h  ARDeclarativePlane_JNI.cpp  ARDeclarativePlane_JNI.h  ARHitTestResult_JNI.cpp  ARImageTarget_JNI.cpp  ARImageTarget_JNI.h  ARNode_JNI.cpp  ARNode_JNI.h  ARSceneController_JNI.cpp  ARSceneController_JNI.h  ARUtils_JNI.cpp  ARUtils_JNI.h  VROARAnchorARCore.cpp  VROARAnchorARCore.h  VROARCameraARCore.cpp  VROARCameraARCore.h  VROARFrameARCore.cpp  VROARFrameARCore.h  VROARHitTestResultARCore.cpp  VROARHitTestResultARCore.h  VROARSessionARCore.cpp  VROARSessionARCore.h  VROCloudAnchorProviderARCore.cpp  VROCloudAnchorProviderARCore.h  VROYuvImageConverter.cpp  VROYuvImageConverter.h
android/app/src/main/cpp/jni/: ARDeclarativeImageNode_JNI.cpp  ARDeclarativeImageNode_JNI.h  ARDeclarativeNode_JNI.cpp  ARDeclarativeNode_JNI.h  ARDeclarativePlane_JNI.cpp  ARDeclarativePlane_JNI.h  ARImageDatabaseLoaderDelegate.cpp  ARImageDatabaseLoaderDelegate.h  ARImageTarget_JNI.cpp  ARImageTarget_JNI.h  ARNode_JNI.cpp  ARNode_JNI.h  ARPlane_JNI.cpp  ARPlane_JNI.h  ARSceneController_JNI.cpp  ARSceneController_JNI.h  ARUtils_JNI.cpp  ARUtils_JNI.h  AmbientLight_JNI.cpp  AnimationChain_JNI.cpp  AnimationGroup_JNI.cpp  AnimationGroup_JNI.h  AnimationTransaction_JNI.cpp  AnimationTransaction_JNI.h  Box_JNI.cpp  Camera_JNI.cpp  Camera_JNI.h  Controller_JNI.cpp  Controls_JNI.h  DirectionalLight_JNI.cpp  EventDelegate_JNI.cpp  EventDelegate_JNI.h  ExecutableAnimation_JNI.cpp  ExecutableAnimation_JNI.h  FixedParticleEmitter_JNI.cpp  FixedParticleEmitter_JNI.h  FrameListener_JNI.h  Geometry_JNI.cpp  Geometry_JNI.h  ImageTrackerOutput_JNI.cpp  (+100 more)
android/app/src/main/res/layout/: activity_viro.xml
android/app/src/main/res/values/: strings.xml
android/viroar/: CMakeLists.txt  build.gradle
android/viroar/src/main/: AndroidManifest.xml
android/viroar/src/main/cpp/arcore/: ARCore_Native.cpp  ARCore_Native.h  VRORendererARCoreNative_JNI.cpp
android/viroar/src/main/res/values/: strings.xml
wasm/: CMakeLists.txt  README.md  build.sh  copy_js.sh  copy_preload.sh  hello.cpp  run.sh
wasm/libs/bullet/: version.txt
wasm/libs/bullet/src/BulletCollision/: CMakeLists.txt
wasm/libs/bullet/src/BulletDynamics/: CMakeLists.txt
wasm/libs/bullet/src/BulletSoftBody/: CMakeLists.txt
wasm/libs/bullet/src/LinearMath/: CMakeLists.txt
wasm/libs/freetype/: version.txt
wasm/libs/jpeg/src/: CMakeLists.txt
wasm/libs/protobuf/: libprotobuf-lite.bc  version.txt
wasm/libs/protobuf/src/: CMakeLists.txt
wasm/libs/protobuf/src/google/protobuf/: any.lo  any.pb.lo  api.pb.lo  arena.lo  arenastring.lo  descriptor.lo  descriptor.pb.lo  descriptor_database.lo  duration.pb.lo  dynamic_message.lo  empty.pb.lo  extension_set.lo  extension_set_heavy.lo  field_mask.pb.lo  generated_message_reflection.lo  generated_message_util.lo  map_field.lo  message.lo  message_lite.lo  reflection_ops.lo  repeated_field.lo  service.lo  source_context.pb.lo  struct.pb.lo  text_format.lo  timestamp.pb.lo  type.pb.lo  unittest.pb.cc  unittest.pb.h  unknown_field_set.lo  wire_format.lo  wire_format_lite.lo  wrappers.pb.lo
wasm/libs/protobuf/src/google/protobuf/.deps/: any.Plo  any.pb.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  duration.pb.Plo  (+23 more)
wasm/libs/zlib/: version.txt
wasm/preload/: Helvetica.ttc  constant_functions_fsh.glsl
wasm/resources/: constant_functions_fsh_adreno.glsl  skinning_vsh.glsl  standard_vsh.glsl
wasm/src/: viro_shell.html
wasm/src/cpp/: VRODriverOpenGLWasm.h  VROImageWasm.cpp  VROImageWasm.h  VROInputControllerWasm.cpp  VROInputControllerWasm.h  VROInputPresenterWasm.h  VROJpegReader.cpp  VROJpegReader.h  VROTypefaceWasm.cpp  VROTypefaceWasm.h  VROViewScene.cpp  VROViewScene.h  VROWasmCAPI.h  VROWasmInclude.h
wasm/src/js/: TestAPI.js
wasm/test/: CMakeLists.txt  build.sh  male02.mtl  run.sh  viro_shell.html
wasm/test/fbx/: CMakeLists.txt  bootstrap.cpp
wasm/test/pbr/: bootstrap.cpp
wasm/test/png/: male02.mtl
(+2373 files in other folders)
